--- a/love nature/parallax.html
+++ b/love nature/parallax.html
@@ -43,6 +43,8 @@
             We are not about us vs. them. It doesn’t matter if you’re an American, a Canadian, or a Papua New Guinean. You don’t even have to be particularly fond of the ocean or have a soft spot for elephants.
             
             This is simply about all of us coming together to do what needs to be done. Because if we don’t, nature will continue to evolve. Without us. Here’s to the future. With humans.
+
+            so nature is everything in world.
             <br><br>
         </p>
     </section>
